--- a/main.bib
+++ b/main.bib
@@ -332,3 +332,294 @@
   year={2008},
   organization={IEEE}
 }
+
+@article{han2024parameter,
+  title={Parameter-efficient fine-tuning for large models: A comprehensive survey},
+  author={Han, Zeyu and Gao, Chao and Liu, Jinyang and Zhang, Jeff and Zhang, Sai Qian},
+  journal={arXiv preprint arXiv:2403.14608},
+  year={2024}
+}
+
+@article{guidotti2024counterfactual,
+  title={Counterfactual explanations and how to find them: literature review and benchmarking},
+  author={Guidotti, Riccardo},
+  journal={Data Mining and Knowledge Discovery},
+  volume={38},
+  number={5},
+  pages={2770--2824},
+  year={2024},
+  publisher={Springer}
+}
+
+@article{chung2022improving,
+  title={Improving diffusion models for inverse problems using manifold constraints},
+  author={Chung, Hyungjin and Sim, Byeongsu and Ryu, Dohoon and Ye, Jong Chul},
+  journal={Advances in Neural Information Processing Systems},
+  volume={35},
+  pages={25683--25696},
+  year={2022}
+}
+
+@article{pan2022overview,
+  title={An overview of signal processing techniques for RIS/IRS-aided wireless systems},
+  author={Pan, Cunhua and Zhou, Gui and Zhi, Kangda and Hong, Sheng and Wu, Tuo and Pan, Yijin and Ren, Hong and Di Renzo, Marco and Swindlehurst, A Lee and Zhang, Rui and others},
+  journal={IEEE Journal of Selected Topics in Signal Processing},
+  volume={16},
+  number={5},
+  pages={883--917},
+  year={2022},
+  publisher={IEEE}
+}
+
+@inproceedings{mou2022deep,
+  title={Deep generalized unfolding networks for image restoration},
+  author={Mou, Chong and Wang, Qian and Zhang, Jian},
+  booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+  pages={17399--17410},
+  year={2022}
+}
+
+@article{hoefler2021sparsity,
+  title={Sparsity in deep learning: Pruning and growth for efficient inference and training in neural networks},
+  author={Hoefler, Torsten and Alistarh, Dan and Ben-Nun, Tal and Dryden, Nikoli and Peste, Alexandra},
+  journal={Journal of Machine Learning Research},
+  volume={22},
+  number={241},
+  pages={1--124},
+  year={2021}
+}
+
+@article{davies2021advancing,
+  title={Advancing neuromorphic computing with loihi: A survey of results and outlook},
+  author={Davies, Mike and Wild, Andreas and Orchard, Garrick and Sandamirskaya, Yulia and Guerra, Gabriel A Fonseca and Joshi, Prasad and Plank, Philipp and Risbud, Sumedh R},
+  journal={Proceedings of the IEEE},
+  volume={109},
+  number={5},
+  pages={911--934},
+  year={2021},
+  publisher={IEEE}
+}
+
+@article{shlezinger2023model,
+  title={Model-based deep learning},
+  author={Shlezinger, Nir and Whang, Jay and Eldar, Yonina C and Dimakis, Alexandros G},
+  journal={Proceedings of the IEEE},
+  volume={111},
+  number={5},
+  pages={465--499},
+  year={2023},
+  publisher={IEEE}
+}
+
+@article{monga2021algorithm,
+  title={Algorithm unrolling: Interpretable, efficient deep learning for signal and image processing},
+  author={Monga, Vishal and Li, Yuelong and Eldar, Yonina C},
+  journal={IEEE Signal Processing Magazine},
+  volume={38},
+  number={2},
+  pages={18--44},
+  year={2021},
+  publisher={IEEE}
+}
+
+@article{song2021solving,
+  title={Solving inverse problems in medical imaging with score-based generative models},
+  author={Song, Yang and Shen, Liyue and Xing, Lei and Ermon, Stefano},
+  journal={arXiv preprint arXiv:2111.08005},
+  year={2021}
+}
+
+@inproceedings{jin2020graph,
+  title={Graph structure learning for robust graph neural networks},
+  author={Jin, Wei and Ma, Yao and Liu, Xiaorui and Tang, Xianfeng and Wang, Suhang and Tang, Jiliang},
+  booktitle={Proceedings of the 26th ACM SIGKDD international conference on knowledge discovery \& data mining},
+  pages={66--74},
+  year={2020}
+}
+
+@inproceedings{wang2020model,
+  title={A model-driven deep neural network for single image rain removal},
+  author={Wang, Hong and Xie, Qi and Zhao, Qian and Meng, Deyu},
+  booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+  pages={3103--3112},
+  year={2020}
+}
+
+@article{chen2022learning,
+  title={Learning to optimize: A primer and a benchmark},
+  author={Chen, Tianlong and Chen, Xiaohan and Chen, Wuyang and Heaton, Howard and Liu, Jialin and Wang, Zhangyang and Yin, Wotao},
+  journal={Journal of Machine Learning Research},
+  volume={23},
+  number={189},
+  pages={1--59},
+  year={2022}
+}
+
+@article{yang2018admm,
+  title={ADMM-CSNet: A deep learning approach for image compressive sensing},
+  author={Yang, Yan and Sun, Jian and Li, Huibin and Xu, Zongben},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={42},
+  number={3},
+  pages={521--538},
+  year={2018},
+  publisher={IEEE}
+}
+
+@inproceedings{lin2019towards,
+  title={Towards optimal structured cnn pruning via generative adversarial learning},
+  author={Lin, Shaohui and Ji, Rongrong and Yan, Chenqian and Zhang, Baochang and Cao, Liujuan and Ye, Qixiang and Huang, Feiyue and Doermann, David},
+  booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+  pages={2790--2799},
+  year={2019}
+}
+
+@article{davies2018loihi,
+  title={Loihi: A neuromorphic manycore processor with on-chip learning},
+  author={Davies, Mike and Srinivasa, Narayan and Lin, Tsung-Han and Chinya, Gautham and Cao, Yongqiang and Choday, Sri Harsha and Dimou, Georgios and Joshi, Prasad and Imam, Nabil and Jain, Shweta and others},
+  journal={Ieee Micro},
+  volume={38},
+  number={1},
+  pages={82--99},
+  year={2018},
+  publisher={IEEE}
+}
+
+@article{xiang2021fista,
+  title={FISTA-Net: Learning a fast iterative shrinkage thresholding network for inverse problems in imaging},
+  author={Xiang, Jinxi and Dong, Yonggui and Yang, Yunjie},
+  journal={IEEE Transactions on Medical Imaging},
+  volume={40},
+  number={5},
+  pages={1329--1339},
+  year={2021},
+  publisher={IEEE}
+}
+
+@article{aggarwal2018modl,
+  title={MoDL: Model-based deep learning architecture for inverse problems},
+  author={Aggarwal, Hemant K and Mani, Merry P and Jacob, Mathews},
+  journal={IEEE transactions on medical imaging},
+  volume={38},
+  number={2},
+  pages={394--405},
+  year={2018},
+  publisher={IEEE}
+}
+
+@article{barbastathis2019use,
+  title={On the use of deep learning for computational imaging},
+  author={Barbastathis, George and Ozcan, Aydogan and Situ, Guohai},
+  journal={Optica},
+  volume={6},
+  number={8},
+  pages={921--943},
+  year={2019},
+  publisher={Optical Society of America}
+}
+
+@article{chen2017broad,
+  title={Broad learning system: An effective and efficient incremental learning system without the need for deep architecture},
+  author={Chen, CL Philip and Liu, Zhulin},
+  journal={IEEE transactions on neural networks and learning systems},
+  volume={29},
+  number={1},
+  pages={10--24},
+  year={2017},
+  publisher={IEEE}
+}
+
+@inproceedings{zhang2017learning,
+  title={Learning deep CNN denoiser prior for image restoration},
+  author={Zhang, Kai and Zuo, Wangmeng and Gu, Shuhang and Zhang, Lei},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={3929--3938},
+  year={2017}
+}
+
+@inproceedings{zhang2018ista,
+  title={ISTA-Net: Interpretable optimization-inspired deep network for image compressive sensing},
+  author={Zhang, Jian and Ghanem, Bernard},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={1828--1837},
+  year={2018}
+}
+
+@article{dhurandhar2018explanations,
+  title={Explanations based on the missing: Towards contrastive explanations with pertinent negatives},
+  author={Dhurandhar, Amit and Chen, Pin-Yu and Luss, Ronny and Tu, Chun-Chen and Ting, Paishun and Shanmugam, Karthikeyan and Das, Payel},
+  journal={Advances in neural information processing systems},
+  volume={31},
+  year={2018}
+}
+
+@inproceedings{zhang2019deep,
+  title={Deep plug-and-play super-resolution for arbitrary blur kernels},
+  author={Zhang, Kai and Zuo, Wangmeng and Zhang, Lei},
+  booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+  pages={1671--1681},
+  year={2019}
+}
+
+@article{jin2017deep,
+  title={Deep convolutional neural network for inverse problems in imaging},
+  author={Jin, Kyong Hwan and McCann, Michael T and Froustey, Emmanuel and Unser, Michael},
+  journal={IEEE transactions on image processing},
+  volume={26},
+  number={9},
+  pages={4509--4522},
+  year={2017},
+  publisher={IEEE}
+}
+
+@article{pillonetto2025deep,
+  title={Deep networks for system identification: a survey},
+  author={Pillonetto, Gianluigi and Aravkin, Aleksandr and Gedon, Daniel and Ljung, Lennart and Ribeiro, Antonio H and Sch{\"o}n, Thomas B},
+  journal={Automatica},
+  volume={171},
+  pages={111907},
+  year={2025},
+  publisher={Elsevier}
+}
+
+@inproceedings{lin2020near,
+  title={Near-optimal algorithms for minimax optimization},
+  author={Lin, Tianyi and Jin, Chi and Jordan, Michael I},
+  booktitle={Conference on learning theory},
+  pages={2738--2779},
+  year={2020},
+  organization={PMLR}
+}
+
+@article{nehme2018deep,
+  title={Deep-STORM: super-resolution single-molecule microscopy by deep learning},
+  author={Nehme, Elias and Weiss, Lucien E and Michaeli, Tomer and Shechtman, Yoav},
+  journal={Optica},
+  volume={5},
+  number={4},
+  pages={458--464},
+  year={2018},
+  publisher={Optical Society of America}
+}
+
+@article{sun2016majorization,
+  title={Majorization-minimization algorithms in signal processing, communications, and machine learning},
+  author={Sun, Ying and Babu, Prabhu and Palomar, Daniel P},
+  journal={IEEE Transactions on Signal Processing},
+  volume={65},
+  number={3},
+  pages={794--816},
+  year={2016},
+  publisher={IEEE}
+}
+
+@article{bottou2018optimization,
+  title={Optimization methods for large-scale machine learning},
+  author={Bottou, L{\'e}on and Curtis, Frank E and Nocedal, Jorge},
+  journal={SIAM review},
+  volume={60},
+  number={2},
+  pages={223--311},
+  year={2018},
+  publisher={SIAM}
+}
