部分问题和可行性研究

--- a/main.bib
+++ b/main.bib
@@ -623,3 +623,40 @@
   year={2018},
   publisher={SIAM}
 }
+
+@misc{fessler2010model,
+  title={Model-Based Image Reconstruction for MRI. IEEE Signal Process. Mag. 27, 81--89},
+  author={Fessler, JA},
+  year={2010}
+}
+
+@article{elbakri2002statistical,
+  title={Statistical image reconstruction for polyenergetic X-ray computed tomography},
+  author={Elbakri, Idris A and Fessler, Jeffrey A},
+  journal={IEEE transactions on medical imaging},
+  volume={21},
+  number={2},
+  pages={89--99},
+  year={2002},
+  publisher={IEEE}
+}
+@article{verhaeghe2008dynamic,
+  title={Dynamic PET reconstruction using wavelet regularization with adapted basis functions},
+  author={Verhaeghe, Jeroen and Van De Ville, Dimitri and Khalidov, Ildar and D'Asseler, Yves and Lemahieu, Ignace and Unser, Michael},
+  journal={IEEE Transactions on Medical Imaging},
+  volume={27},
+  number={7},
+  pages={943--959},
+  year={2008},
+  publisher={IEEE}
+}
+@article{aguet2008model,
+  title={Model-based 2.5-D deconvolution for extended depth of field in brightfield microscopy},
+  author={Aguet, Fran{\c{c}}ois and Van De Ville, Dimitri and Unser, Michael},
+  journal={IEEE Transactions on Image Processing},
+  volume={17},
+  number={7},
+  pages={1144--1153},
+  year={2008},
+  publisher={IEEE}
+}
